--- a/#sources/scss/ui.scss
+++ b/#sources/scss/ui.scss
@@ -1,6 +1,6 @@
-@import "null.scss";
-@import "var.scss";
-@import "fonts.scss";
+@import "./null.scss";
+@import "./var.scss";
+@import "./fonts.scss";
 
 [class*="__container"] {
   max-width: 1220px;
