--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -553,7 +553,7 @@
       right: 0;
       width: 24px;
       height: 24px;
-      background: url("../../img/icons/spoiler-icon.svg") no-repeat 100%;
+      background: url("../img/icons/spoiler-icon.svg") no-repeat 100%;
       background-position: center;
       transition: filter ease $animSpeed, transform ease 0.2s;
     }
