--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -1,7 +1,7 @@
-@import "./null.scss";
-@import "./ui.scss";
-@import "./var.scss";
-@import "./fonts.scss";
+@import "./null";
+@import "./ui";
+@import "./var";
+@import "./fonts";
 
 .header {
   background-color: #fff;
