--- a/#sources/scss/ui.scss
+++ b/#sources/scss/ui.scss
@@ -1,6 +1,6 @@
-@import "./null.scss";
-@import "./var.scss";
-@import "./fonts.scss";
+@import "./null";
+@import "./var";
+@import "./fonts";
 
 [class*="__container"] {
   max-width: 1220px;
