--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ body::-webkit-scrollbar-thumb {
 a,
 button,
 .catalog-category,
-.open-popup-location {
+.open-popup-location, .slider-bullet {
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -388,6 +388,38 @@ button,
 .slider-init .slider-slide {
   scroll-snap-align: start;
   padding-left: 10px;
+}
+
+.slider-bullet {
+  height: 2px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  border-radius: 2px;
+  background-color: #fff;
+  cursor: pointer;
+  -webkit-transition: background-color ease 0.3s;
+  transition: background-color ease 0.3s;
+  position: relative;
+}
+.slider-bullet:hover {
+  background-color: #ccc;
+}
+.slider-bullet::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.slider-bullet_active {
+  background-color: #363436;
+}
+.slider-bullet_active:hover {
+  background-color: #363436;
 }
 
 @font-face {
@@ -2018,6 +2050,18 @@ button,
   transition: transform ease 0.2s;
   transition: transform ease 0.2s, -webkit-transform ease 0.2s;
 }
+.hero__bullets {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+@media (max-width: 1200px) {
+  .hero__bullets {
+    gap: calc(8px + 22 * (100vw - 320px) / 880);
+  }
+}
+
 .hero-slider {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 54.2455%;
